--- a/uc2/css/style.css
+++ b/uc2/css/style.css
@@ -1,7 +1,7 @@
 /* reset de página para evitar configurações do navegador */
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin-top: 200px;
     padding: 0;
     text-align: center;
     background-color: #f5f5f5;
@@ -74,6 +74,7 @@ footer {
 }
 
 .footer-social img{
+    width: 40px;
     padding: 10px;
 }
 
@@ -127,6 +128,24 @@ footer {
     max-width: 35%; /* Define um tamanho máximo para não ficar muito largo */
 }
 
+/* Estilizando a tabela */
+
+.tabela-viagens {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.tabela-viagens th, .tabela-viagens td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+}
+
+.tabela-viagens th {
+    background-color: #0077b6;
+    color: white;
+}
 
 
 
